<resources>
    <string name="app_name">ClubMobile</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="error_join_clubs">Failed to join club</string>
    <string name="sign_in">Sign in</string>
    <string name="signing_in">Signing in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="leave_club">Leave club</string>
    <string name="sign_out">Sign out</string>
    <string name="find_clubs">Find clubs</string>
    <string name="my_clubs">My clubs</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="search">Search</string>
</resources>
